ajustes de bloqueio por UUID por voto. ajustes no export do excel ajustes nas nos textos da pagina de confirmar voto e erro.

--- a/src/main/resources/templates/vote-failure.html
+++ b/src/main/resources/templates/vote-failure.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 <div class="message-container">
-    <h1>Você já votou neste anime.</h1>
+    <h1>Você já votou.</h1>
     <a href="/vote">Voltar para a página de votação</a>
 </div>
 </body>
